JSP, JSF, DAO Design Pattern

--- a/JavaServerPages/web/addcustomer.html
+++ b/JavaServerPages/web/addcustomer.html
@@ -11,7 +11,7 @@ Add a customer to the classic models database
     </head>
     <body>
         <div>Add Customer</div>
-        <form action="${pageContext.request.contextPath}/AddCustomer" method="post">
+        <form action="AddCustomer" method="post">
         <label for="customerName">Customer Name:</label><br>
         <input type="text" id="customerName" name="customerName"><br>
         <label for="contactFirstName">First name:</label><br>
